--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">MediaPlayerApp</string>
     <string name="button_name">Play</string>
+    <string name="song_name">Sorry Seems To Be The Hardest Word</string>
+    <string name="artist_name">Elton John</string>
 </resources>
